Add favicon, title, and footer signature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Mimiqit - SaaS Analytics Dashboard Design</title>
+      <link rel="icon" type="image/png" href="/src/assets/images/mimiqit-logo.png" />
+      <title>MimiqIt Analytics Dashboard</title>
     </head>
 
     <body>
